@@ -1,53 +1,48 @@
 package de.nicouschulas.customhitcommand;
 
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.UUID;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.regex.Pattern;
 
 public class SecurityUtils {
 
-    private static final ConcurrentHashMap<UUID, Long> lastUsage = new ConcurrentHashMap<>();
-    private static long cooldownTime;
+    private static final ConcurrentHashMap<UUID, Long> LAST_USAGE = new ConcurrentHashMap<>();
+    private static long cooldownTime = 3000;
+
     private static final long CLEANUP_CUTOFF_TIME = 30 * 60 * 1000;
 
+    private static final Pattern DANGEROUS_PATTERN = Pattern.compile(
+            "[;&|`]|\\$\\(" +
+                    "|\\b(rm|del|format|shutdown|stop)\\b" +
+                    "|[\\n\\r\\t]",
+            Pattern.CASE_INSENSITIVE
+    );
+
     public static boolean isCommandTemplateSafe(String commandTemplate) {
-        if (commandTemplate == null || commandTemplate.trim().isEmpty()) {
+        if (commandTemplate == null || commandTemplate.isBlank()) {
             return false;
         }
-
-        String[] dangerousPatterns = {
-                ";", "&&", "||", "|", "`", "$(",
-                "rm ", "del ", "format ", "shutdown", "stop",
-                "\\n", "\\r", "\\t"
-        };
-
-        String lowerCommand = commandTemplate.toLowerCase();
-        for (String pattern : dangerousPatterns) {
-            if (lowerCommand.contains(pattern)) {
-                return false;
-            }
-        }
-        return true;
+        return !DANGEROUS_PATTERN.matcher(commandTemplate).find();
     }
 
     public static boolean canPlayerUseCommand(UUID playerUUID) {
         long currentTime = System.currentTimeMillis();
-        Long lastUse = lastUsage.get(playerUUID);
+        Long lastUse = LAST_USAGE.get(playerUUID);
 
         if (lastUse == null || (currentTime - lastUse) >= cooldownTime) {
-            lastUsage.put(playerUUID, currentTime);
+            LAST_USAGE.put(playerUUID, currentTime);
             return true;
         }
         return false;
     }
 
     public static long getRemainingCooldown(UUID playerUUID) {
-        Long lastUse = lastUsage.get(playerUUID);
+        Long lastUse = LAST_USAGE.get(playerUUID);
         if (lastUse == null) {
             return 0;
         }
 
-        long elapsed = System.currentTimeMillis() - lastUse;
-        long remaining = cooldownTime - elapsed;
+        long remaining = (lastUse + cooldownTime) - System.currentTimeMillis();
         return Math.max(0, remaining);
     }
 
@@ -56,7 +51,9 @@ public class SecurityUtils {
     }
 
     public static void cleanupOldEntries() {
+        if (LAST_USAGE.isEmpty()) return;
+
         long cutoffTime = System.currentTimeMillis() - CLEANUP_CUTOFF_TIME;
-        lastUsage.entrySet().removeIf(entry -> entry.getValue() < cutoffTime);
+        LAST_USAGE.entrySet().removeIf(entry -> entry.getValue() < cutoffTime);
     }
 }
